--- a/web/package.json
+++ b/web/package.json
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@types/leaflet": "^1.9.21",
     "date-fns": "^4.1.0",
+    "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
+    "react-leaflet-cluster": "^4.0.0",
     "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
