--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@types/leaflet": "^1.9.21",
     "@types/mapbox-gl": "^3.4.1",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "maplibre-gl": "^5.15.0",
     "react": "^19.2.0",
@@ -26,6 +27,7 @@
     "@eslint/js": "^9.39.1",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/html2canvas": "^0.5.35",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
