--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@types/leaflet": "^1.9.21",
     "@types/mapbox-gl": "^3.4.1",
     "date-fns": "^4.1.0",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "maplibre-gl": "^5.15.0",
